nginx-ingress-kubernetes/03-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #tls:
  #- hosts:
  #  - testing.cloud.foobar.com          # Required Alias record on R53  (or use simple LB)
  rules:  
  - host: aaaaaaaaaaaaaaaaaa-bbbbbbbb.elb.us-east-1.amazonaws.com # Required Alias record on R53  (or use simple LB)      
    http: 
      paths:
        - path: /pod01                 # http://your-domain/pod01 
          backend:
            serviceName: pod01-service
            servicePort: 5678    
        - path: /pod02                # http://your-domain/pod02 
          backend:
            serviceName: pod02-service
            servicePort: 5678                        
        - path: /grafana/(.*)                # http://your-domain/grafana/
          backend:
            serviceName: grafana-service
            servicePort: 3000 
####################### ON TEST ###########################################            
#        - path: /pod03                # http://your-domain/grafana/
#          backend:
#            serviceName: pod3service.default.svc.cluster.local
#            servicePort: 5678                   
#
#  - host: pod3service.default.svc.cluster.local 
#    http:
#      paths:
#      - path: /pod03
#        backend:
#          serviceName: pod3service
#          servicePort: 5678
